istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: domain-monitor-peer-auth
  namespace: domain-monitor
  labels:
    app: domain-monitor
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: domain-monitor
  mtls:
    mode: STRICT
